--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -13,11 +13,17 @@
             background-position: top center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /* Shorthand para background
+            color>image>position>repeat>[size]>attachment
+            */
+            /*  background: black url('imagens/wallpaper002.jpg') top center no-repeat fixed);
+            background-size: cover;*/
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             margin: auto;
             border: 1px solid black;
             border-radius: 20px;
