--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -7,6 +7,13 @@
     <title>Iframe</title>
 </head>
 <body>
-    
+
+    <!--Por padrão o iframe tem 300x150-->
+    <h1>Testando um iframe</h1>
+    <p>Acesse o site do
+        <iframe src="https://cursoemvideo.com" frameborder="0">
+            <a href="https://cursoemvideo.com">Curso em vídeo</a>
+        </iframe>    
+        para aprender a programar</p>
 </body>
 </html>
